[package]
name = "csv-compare"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2"
indicatif = "0.17.7"
polars = { version = "0.36.0", features = ["lazy"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
